--- a/custom/themes/ingenuity/src/sass/layout/_main.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_main.scss
@@ -37,6 +37,16 @@ body {
 		height: auto;
     }
     blockquote {
+    	margin: 0;
+    	border-left: 0;
+		@include media($bp-small) {
+			font-size: modular-scale(0, 1.5rem);
+			line-height: modular-scale(1, 1.5rem);
+			p {
+				font-size: modular-scale(0, 1.5rem);
+				line-height: modular-scale(1, 1.5rem);
+			}
+	    }
     }
     ul {
     	margin: -15px 0 15px 0;
