Update: MOZ fix - fullscreen menu

--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -12,7 +12,7 @@ body.no_scroll {
 
   body.no_scroll .expanded {
     /*padding-right: 7px;*/
-    background: rgba(0, 0, 0,.98); /* because FF no blur, reduce bg transparency */
+    // background: rgba(0, 0, 0,.98); /* because FF no blur, reduce bg transparency */
   }
 }
 
