--- a/custom/themes/ingenuity/src/sass/layout/_projects.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_projects.scss
@@ -99,6 +99,9 @@
 	background-color: rgba(0,0,0,0.9);
 	padding: 50px 10%;
 	margin: 0 0 50px;
+	@include media($bp-small) {
+		font-size: modular-scale(2);
+	}
 	blockquote {
 		color: $white;
 		&:before {
