Update: footnote and tooltip styles

--- a/custom/themes/ingenuity/src/sass/layout/_blog.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_blog.scss
@@ -47,7 +47,29 @@
 	@include display(flex);
 	@include align-items(center);
 	@include justify-content(space-between);
+	background: $yellow;
+	.blog-nav__arrow {
+		background-color: $yellow;
+		padding: 10px 20px;
+		p {
+			margin-bottom: 0;
+			color: $black;
+		}
+	}
+}
 
+.hint--left {
+	color: $white;
+	background: $grey;
+	width: 30px;
+	height: 30px;
+	// padding: 5px;
+	border-radius: 50%;
+	text-align: center;
+	font-size: modular-scale(0, 1.2rem);
+	&:hover {
+		cursor: pointer;
+	}
 }
 
 
