--- a/custom/themes/ingenuity/src/sass/layout/_footer.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_footer.scss
@@ -22,6 +22,9 @@
 	@include media($bp-small) {
 		margin-bottom: 25px;
 	}
+	@include media($bp-med) {
+		margin-bottom: 25px;
+	}
 	@include media($bp-large) {
 		@include flex(0 0 30%);
 		margin: 0 1.5%;
