--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -4117,6 +4117,9 @@ Copyright (c) 2015 Daniel Eden
   @media screen and (max-width: 30em) {
     .footer__third {
       margin-bottom: 25px; } }
+  @media screen and (min-width: 30em) and (max-width: 50em) {
+    .footer__third {
+      margin-bottom: 25px; } }
   @media screen and (min-width: 50em) {
     .footer__third {
       -webkit-box-flex: 0;
