--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -4286,12 +4286,16 @@ form.footer-newsletter {
   -webkit-transform: translate3d(0, 2.1em, 0) scale3d(0.65, 0.65, 1);
   transform: translate3d(0, 2.1em, 0) scale3d(0.65, 0.65, 1); }
 
-.footer__map {
+.footer__cta {
+  height: 100%;
+  width: 100%;
   position: relative; }
-  .footer__map iframe {
+  .footer__cta h4 {
+    font-family: "Audimat3000-Leger", sans-serif; }
+  .footer__cta img {
     position: relative;
-    width: 100%;
-    height: 100%; }
+    max-width: 50%;
+    height: auto; }
 
 .main-header {
   height: 90px;
@@ -4703,6 +4707,30 @@ span.big-quotes {
   font-size: 3.55289rem;
   line-height: 4.736rem;
   text-align: center; }
+
+button#we-owe-you {
+  padding: 10px 15px;
+  max-width: 300px;
+  color: #4f4f4f;
+  margin: 20px 10%;
+  background-color: #fcd838;
+  border: none;
+  text-transform: uppercase;
+  font-family: "Audimat3000-Leger", sans-serif; }
+  button#we-owe-you:hover {
+    background-color: black;
+    color: #fcd838;
+    border: none; }
+
+.search-error-page {
+  margin: 15px 10%; }
+
+.error-submit {
+  text-transform: uppercase;
+  font-family: "Audimat3000-Leger", sans-serif;
+  background-color: #fcd838;
+  color: black;
+  border: 0; }
 
 @media screen and (max-width: 30em) {
   aside {
