--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -4710,8 +4710,8 @@ span.big-quotes {
 
 button#we-owe-you {
   padding: 10px 15px;
-  max-width: 300px;
-  color: #4f4f4f;
+  max-width: 250px;
+  color: black;
   margin: 20px 10%;
   background-color: #fcd838;
   border: none;
@@ -4730,7 +4730,26 @@ button#we-owe-you {
   font-family: "Audimat3000-Leger", sans-serif;
   background-color: #fcd838;
   color: black;
-  border: 0; }
+  border: 0;
+  padding: 5px 10px;
+  margin-left: 10px; }
+
+.search-form-error {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center; }
 
 @media screen and (max-width: 30em) {
   aside {
