--- a/custom/themes/ingenuity/src/sass/layout/_services.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_services.scss
@@ -7,6 +7,9 @@
 	@include media($bp-small) {
 		margin: 40px -5%;
 	}
+	@include media($bp-med) {
+		margin: 40px -5%;
+	}
 	@include media($mobile-landscape) {
 		margin: 40px -5%;
 	}
@@ -29,6 +32,9 @@
 	padding: 0 70px 25px 0;
 	@include media($bp-small) {
 		padding: 0 15px 25px;
+	}
+	@include media($bp-med) {
+		padding: 25px;
 	}
 	@include media($mobile-landscape) {
 		padding: 0 15px 25px;
