--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -4286,6 +4286,9 @@ form.footer-newsletter {
   -webkit-transform: translate3d(0, 2.1em, 0) scale3d(0.65, 0.65, 1);
   transform: translate3d(0, 2.1em, 0) scale3d(0.65, 0.65, 1); }
 
+#mc-embedded-subscribe {
+  font-family: "Audimat3000-Leger", sans-serif; }
+
 .footer__cta {
   height: 100%;
   width: 100%;
@@ -4296,6 +4299,15 @@ form.footer-newsletter {
     position: relative;
     max-width: 50%;
     height: auto; }
+  .footer__cta button {
+    color: black;
+    background-color: #fcd838;
+    padding: 10px 15px;
+    font-family: "Audimat3000-Leger", sans-serif;
+    border: 0;
+    margin: 20px 0; }
+    .footer__cta button:hover {
+      background-color: #4f4f4f; }
 
 .main-header {
   height: 90px;
@@ -5060,6 +5072,9 @@ h3.mission {
   @media screen and (max-width: 30em) {
     .two-column {
       margin: 40px -5%; } }
+  @media screen and (min-width: 30em) and (max-width: 50em) {
+    .two-column {
+      margin: 40px -5%; } }
   @media screen and (max-height: 35.5em) and (orientation: landscape) {
     .two-column {
       margin: 40px -5%; } }
@@ -5088,6 +5103,9 @@ h3.mission {
   @media screen and (max-width: 30em) {
     .services-testimonial {
       padding: 0 15px 25px; } }
+  @media screen and (min-width: 30em) and (max-width: 50em) {
+    .services-testimonial {
+      padding: 25px; } }
   @media screen and (max-height: 35.5em) and (orientation: landscape) {
     .services-testimonial {
       padding: 0 15px 25px; } }
@@ -5700,7 +5718,7 @@ button.drop-down-cross {
 
 #contact-map {
   width: 100%;
-  height: 100vh; }
+  height: 80vh; }
 
 .contact-container {
   display: -webkit-box;
