--- a/custom/themes/ingenuity/src/sass/layout/_projects.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_projects.scss
@@ -1,7 +1,7 @@
 // PROJECTs Landing Page
 .projects__panel-container {
 	width: 100%;
-	margin-top: 50px;
+	// margin-top: 50px;
 	position: relative;
 	@include display(flex);
 	@include align-items(center);
