--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -304,9 +304,10 @@ main {
 .blog-entry p:first-child {
 	&:first-letter {
 	    float: left; 
-        font-size: modular-scale(6); 
-        line-height: modular-scale(5);
-        padding: 7px 10px 0px 0px;
+        font-size: modular-scale(7); 
+        line-height: modular-scale(6);
+        padding: 7px 25px 0px 0px;
+        // font-family: $main-headings;
         @include media($bp-small) {
             font-size: modular-scale(3);
             line-height: modular-scale(3);
