--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -4477,7 +4477,8 @@ form.footer-newsletter {
     line-height: 4.10453rem;
     font-family: "Audimat3000-Regulier", sans-serif; }
 
-.default-hero.blog-index {
+.default-hero.blog-index,
+.default-hero.project-index {
   min-height: 50vh; }
 
 .default-hero.blog-hero hgroup {
@@ -5040,6 +5041,117 @@ span.sq-ft {
     opacity: 0;
     -webkit-transform: translateY(30px);
     transform: translateY(30px); }
+  80% {
+    opacity: 0; }
+  100% {
+    opacity: 0; } }
+/*Horizontal Sliding*/
+.sentence {
+  color: #222;
+  font-size: 30px;
+  text-align: left; }
+
+.slidingHorizontal {
+  display: inline; }
+
+.slidingHorizontal span {
+  animation: leftToRight 12.5s linear infinite 0s;
+  -ms-animation: leftToRight 12.5s linear infinite 0s;
+  -webkit-animation: leftToRight 12.5s linear infinite 0s;
+  color: #fcd838;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute; }
+
+.slidingHorizontal span:nth-child(2) {
+  animation-delay: 2.5s;
+  -ms-animation-delay: 2.5s;
+  -webkit-animation-delay: 2.5s; }
+
+.slidingHorizontal span:nth-child(3) {
+  animation-delay: 5s;
+  -ms-animation-delay: 5s;
+  -webkit-animation-delay: 5s; }
+
+.slidingHorizontal span:nth-child(4) {
+  animation-delay: 7.5s;
+  -ms-animation-delay: 7.5s;
+  -webkit-animation-delay: 7.5s; }
+
+.slidingHorizontal span:nth-child(5) {
+  animation-delay: 10s;
+  -ms-animation-delay: 10s;
+  -webkit-animation-delay: 10s; }
+
+/*leftToRight Animation*/
+@-webkit-keyframes leftToRight {
+  0% {
+    opacity: 0; }
+  5% {
+    opacity: 0;
+    -webkit-transform: translateX(-50px); }
+  10% {
+    opacity: 1;
+    -webkit-transform: translateX(0px); }
+  25% {
+    opacity: 1;
+    -webkit-transform: translateX(0px); }
+  30% {
+    opacity: 0;
+    -webkit-transform: translateX(50px); }
+  80% {
+    opacity: 0; }
+  100% {
+    opacity: 0; } }
+/*Push Effect*/
+.pushEffect {
+  display: inline; }
+
+.pushEffect span {
+  animation: push 12.5s linear infinite 0s;
+  -ms-animation: push 12.5s linear infinite 0s;
+  -webkit-animation: push 12.5s linear infinite 0s;
+  color: #fcd838;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute; }
+
+.pushEffect span:nth-child(2) {
+  animation-delay: 2.5s;
+  -ms-animation-delay: 2.5s;
+  -webkit-animation-delay: 2.5s; }
+
+.pushEffect span:nth-child(3) {
+  animation-delay: 5s;
+  -ms-animation-delay: 5s;
+  -webkit-animation-delay: 5s; }
+
+.pushEffect span:nth-child(4) {
+  animation-delay: 7.5s;
+  -ms-animation-delay: 7.5s;
+  -webkit-animation-delay: 7.5s; }
+
+.pushEffect span:nth-child(5) {
+  animation-delay: 10s;
+  -ms-animation-delay: 10s;
+  -webkit-animation-delay: 10s; }
+
+/*Push Effect Animation*/
+@-webkit-keyframes push {
+  0% {
+    opacity: 0; }
+  5% {
+    opacity: 0;
+    -webkit-transform: rotate(0deg) scale(2) skew(0deg) translate(0px); }
+  10% {
+    opacity: 1;
+    -webkit-transform: translateX(0px); }
+  25% {
+    opacity: 1;
+    -webkit-transform: translateX(0px); }
+  30% {
+    opacity: 0;
+    -webkit-transform: translateX(0px); }
   80% {
     opacity: 0; }
   100% {
