Update: IE 11 default hero fix

--- a/custom/themes/ingenuity/src/sass/layout/_header.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_header.scss
@@ -61,6 +61,7 @@
 	@include align-items(center);
 	@include justify-content(center);
 	hgroup {
+		width: 100%;
 		@include display(flex);
 		// @include align-items(center);
 		// @include justify-content(center);
