--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -321,6 +321,7 @@ span.sq-ft {
 	animation: push 12.5s linear infinite 0s;
 	-ms-animation: push 12.5s linear infinite 0s;
 	-webkit-animation: push 12.5s linear infinite 0s;
+	-moz-animation: push 12.5s linear infinite 0s;
 	color: $yellow;
 	opacity: 0;
 	overflow: hidden;
