--- a/custom/themes/ingenuity/src/sass/layout/_team.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_team.scss
@@ -114,7 +114,7 @@ button.drop-down-cross {
 	top: 20px;
 	overflow: hidden;
 	border: none;
-	background: url(../ingenuity/dist/images/cross.png) no-repeat center center;
+	background: url(../images/cross.png) no-repeat center center;
 	text-indent: 200%;
 	color: transparent;
 	outline: none;
