Update: mobile tweaks iOS

--- a/custom/themes/ingenuity/src/sass/layout/_contact.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_contact.scss
@@ -1,6 +1,6 @@
 #contact-map {
 	width: 100%;
-	height: 80vh;
+	min-height: 80vh;
 }
 
 .contact-container {
@@ -14,6 +14,10 @@
 	}
 	width: 100%;
 	padding: 25px;
+	@include media($bp-small) {
+		min-height: 100vh;
+		@include flex-direction(column);
+	}
 }
 
 .contact__single {
