--- a/custom/themes/ingenuity/src/sass/layout/_contact.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_contact.scss
@@ -23,7 +23,7 @@
 .contact__single {
 	width: 100%;
 	position: relative;
-	min-height: 400px;	
+	// min-height: 400px;	
 	padding: 0 25px;
 	margin: 1.5%;
 	@include flex(0 0 30%);
