Update: iOS - contact

--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -590,12 +590,19 @@ span.bolded-text {
 		color: $black;
 		font-size: modular-scale(2, 1rem);
 		margin: 0;
+		@include media($bp-small) {
+			font-size: modular-scale(2, 1rem);
+		}
 	}
 	p {
 		font-family: $main-headings;
 		font-size: modular-scale(1, 1rem);
 		line-height: modular-scale(1, 1.3rem);
 		margin-bottom: 0;
+		@include media($bp-small) {
+			font-size: modular-scale(0, 1rem);
+			line-height: modular-scale(0, 1.3rem);
+		}
 	}
 }
 
