Update: mobile iOS - contact pg

--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -591,7 +591,8 @@ span.bolded-text {
 		font-size: modular-scale(2, 1rem);
 		margin: 0;
 		@include media($bp-small) {
-			font-size: modular-scale(2, 1rem);
+			font-size: modular-scale(1, 1rem);
+			line-height: modular-scale(1, 1rem);
 		}
 	}
 	p {
