--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -206,6 +206,15 @@ span.black-highlight {
 	}
 }
 
+.default-hero.about-page {
+	h1 {
+		@include media($bp-small) {
+			font-size: modular-scale(2, 1rem);
+			line-height:modular-scale(2, 1rem);
+		}
+	}
+}
+
 .default-hero.blog-hero {
 	h1 {
 		font-size: modular-scale(3, 1.3rem);
