--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -206,11 +206,11 @@ span.black-highlight {
 	}
 }
 
-.default-hero.about-page {
+.default-hero.about-header {
 	h1 {
 		@include media($bp-small) {
-			font-size: modular-scale(1, 1rem);
-			line-height:modular-scale(1, 1rem);
+			font-size: modular-scale(2, 1rem);
+			line-height:modular-scale(2, 1.2rem);
 		}
 	}
 }
