--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -209,6 +209,10 @@ span.black-highlight {
 .default-hero.about-header {
 	h1 {
 		@include media($bp-small) {
+			font-size: modular-scale(2, 1rem);
+			line-height:modular-scale(2, 1.2rem);
+		}
+		@include media($mobile-landscape) {
 			font-size: modular-scale(3, 1rem);
 			line-height:modular-scale(3, 1.2rem);
 		}
