Update: gallery - mobile

--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -67,6 +67,12 @@
         @include align-items(center);
         @include justify-content(center);
     }
+    @include media($mobile-landscape) {
+        // min-height: 100vh;
+        @include display(flex);
+        @include align-items(center);
+        @include justify-content(center);
+    }
     img {
         position: relative;
         width: 100%;
