--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -355,7 +355,7 @@ main {
 			font-size: modular-scale(3, 1.2rem); 
 			line-height: modular-scale(3, 1.2rem); 
 			@include media($bp-small) {
-				font-size: modular-scale(1, 1.3rem); 
+				font-size: modular-scale(1, 1.3em); 
 				line-height: modular-scale(1, 1.5rem); 
 		    }
 		    @include media($mobile-landscape) {
@@ -560,7 +560,6 @@ h2.team__hero-subheading {
 			line-height: modular-scale(1);
 		}
 	}
-
 }
 
 .blog-single-post {
