Update: blog header fix

--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -205,6 +205,9 @@ span.black-highlight {
 			line-height:modular-scale(1, 1rem);
 	    }
 	}
+	h2 p {
+		margin: 0;
+	}
 }
 
 .default-hero.about-header {
