--- a/custom/themes/ingenuity/src/sass/layout/_footer.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_footer.scss
@@ -20,7 +20,7 @@
 .footer__third {
 	@include flex(1 0 auto);
 	@include media($bp-small) {
-		margin-bottom: 25px;
+		margin: 20px 0;
 		@include flex(1 0 auto);
 	}
 	@include media($bp-med) {
