--- a/custom/themes/ingenuity/src/sass/layout/_header.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_header.scss
@@ -126,3 +126,16 @@
 .default-hero.project-index {
 	min-height: 50vh;
 }
+
+.default-hero.project-index {
+	hgroup {
+		margin: 50px auto 0;
+		h1,
+		h2 {
+			text-align: center;
+		}
+		h2 {
+			margin: 0 auto;
+		}
+	}
+}
