Update: new header

--- a/custom/themes/ingenuity/src/sass/layout/_header.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_header.scss
@@ -72,7 +72,7 @@
 .home-hero {
 	min-height: 100vh;
 	hgroup {
-		// margin-top: 100px;
+		margin-top: 150px; //newnav
 		img {
 			width: 200px;
 			height: auto;
