--- a/custom/themes/ingenuity/src/sass/components/_navtwo.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navtwo.scss
@@ -1,17 +1,3 @@
-.site-width {
-  img#home-logo {
-    max-height: 140px;
-    width: auto;
-    padding-top: 25px;
-  }
-  img#default-logo {
-    max-height: 120px;
-    width: auto;
-    padding-top: 25px;
-  }
-}
-
-
 /* when navigation is shown, don’t allow scrolling of content */
 body.no_scroll {
   overflow: hidden;
@@ -36,15 +22,15 @@ body.no_scroll {
 
 nav {
   color: $yellow;
-  background-color: rgba(0,0,0,0);
+  background-color: $black;
   font-family: $main-headings;
   font-size: modular-scale(2);
   letter-spacing: 3px;
   position: absolute;
-  box-shadow: 0px 0px 7px rgba(0,0,0, 0.0);
+  box-shadow: 0px 0px 7px rgba(0,0,0, 0.4);
   top: 0;
   width: 100%;
-  height: 150px; /* smaller height because font is smaller */
+  height: 80px; /* smaller height because font is smaller */
   // padding-top: 25px;
   right: 0;
   z-index: 900;
@@ -85,26 +71,18 @@ nav {
 }
 
 /* on navigation hover add slight white bg */
-nav.default-home-header:hover {
+nav:hover {
   background: rgba(0,0,0,.7);
-}
-
-nav.home-header:hover {
-  background: rgba(0,0,0,0.0);
 }
 
 /* limits width of menu to site width */
 .site-width {
   max-width: 100%;
   margin: 0 auto;
-  padding: 0 9%;
+  padding: 0 10%;
   @include media($bp-small) {
     padding: 10px 20px 0;
   }
-}
-
-.default-home-header .site-width {
-  padding: 0 10%;
 }
 
 /* name of site in main menu (not user selectable) */
@@ -167,23 +145,6 @@ nav.expanded {
   }
 }
 
-/* increases menu width & height */
-nav.home-header.expanded {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  cursor: default;
-  background: rgba(252, 216, 56,1);
-  overflow-y: scroll;
-  .site-width>a {
-    color: $black;
-  }
-}
-
-.home-header #navigation ul {
-  margin-top: -20px;
-}
-
 /* positions navigation content */
 #navigation {
   -webkit-transform: translate(0,-700px);
@@ -223,8 +184,8 @@ nav.home-header.expanded {
   li {
     padding: 2px 15%;
     padding-top: 10px;
-    font-size: modular-scale(4,0.9rem);
-    line-height: modular-scale(4,0.9rem);
+    font-size: modular-scale(4,1.1rem);
+    line-height: modular-scale(4,1.1rem);
     font-weight: 400;
     font-family: $main-headings;
     &:hover{
