--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -143,7 +143,7 @@ nav.home-header:hover {
   transition: all 0.5s;
   font-family: $main-headings;
   @include media($bp-small) {
-    display: block
+    display: block;
     font-size: modular-scale(1); 
     line-height: modular-scale(1);
   }
