Update: home header

--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -99,7 +99,7 @@ nav {
 
 /* on navigation hover add slight white bg */
 nav.default-home-header:hover {
-  background: rgba(0,0,0,.7);
+  background: rgba(0,0,0,0);
 }
 
 nav.default-home-header.logo-appear.detached {
