--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -1,6 +1,6 @@
 .site-width {
   img#home-logo {
-    max-height: 140px;
+    max-height: 170px;
     width: auto;
     padding-top: 25px;
   }
@@ -99,7 +99,7 @@ nav {
 
 /* on navigation hover add slight white bg */
 nav.default-home-header:hover {
-  background: rgba(0,0,0,0);
+  // background: rgba(0,0,0,0);
 }
 
 nav.default-home-header.logo-appear.detached {
