--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -100,6 +100,12 @@ h2.rw-sentence{
 	    font-size: modular-scale(4); 
 		line-height: modular-scale(4); 
 	}	
+	@include media($bp-xlarge) {
+		margin: 0 8%;
+		text-align: left;
+	    font-size: modular-scale(5); 
+		line-height: modular-scale(5); 
+	}
 	@include media($mobile-landscape) {
 		margin: 0 0 0 20px;
 		font-size: modular-scale(2, 1.3rem); 
@@ -126,7 +132,7 @@ h2.rw-sentence{
 		padding-left: 400px;
 	}
 	@include media($bp-large) {
-		padding-left: 630px;
+		padding-left: 470px;
 	}
 	@include media($mobile-landscape) {
 		padding-left: 230px;
